# rs-crm

./: .gitignore  .tokeignore  Cargo.toml  README.md  grpc-tutorial.md
crm/: Cargo.toml  build.rs
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs  mod.rs
crm-send/: Cargo.toml  build.rs  send.yml
crm-send/src/: config.rs  lib.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: mod.rs  notification.rs
crm/src/: main.rs
crm/src/abi/: crm.rs  mod.rs
crm/src/pb/: crm.rs
protos/: crm.proto
protos/crm/: crm.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: connect_postgres.rs  gen.rs
user-stat/migrations/: 20240816130333_init.sql  20240816130755_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: mod.rs  user_stats.rs
user-stat/tests/: service.rs
