[workspace]
members = [
    "crm",
    "crm-metadata",
    "crm-send",
    "user-stat",
]

# 第二个版本的依赖解析控制器
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"

serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.34"

sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# 为什么要在这里添加
# 这是一个本地依赖
crm-metadata = { path = "crm-metadata" }
crm-send = { path = "crm-send" }
user-stat = { path = "user-stat" }