[package]
name = "crm"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}

[build-dependencies]
prost-build = {workspace = true}
anyhow = {workspace = true}
tonic-build = {workspace = true}
